k8s/activity-blog-backend-deployment.yaml
# activity-blog-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-blog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-blog-backend
  template:
    metadata:
      labels:
        app: activity-blog-backend
    spec:
      containers:
        - name: activity-blog-backend
          image: activity-blog-backend
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: activity-blog-backend-service
spec:
  ports:
    - port: 8080
  selector:
    app: activity-blog-backend
